crates/urd-derive/tests/ui/enum_rejected.stderr
error: ExternObject can only be derived for structs
 --> tests/ui/enum_rejected.rs:4:6
  |
4 | enum BadEnum {
  |      ^^^^^^^
