crates/urd-derive/tests/ui/enum_rejected.rs
use urd::ExternObject;

#[derive(ExternObject)]
enum BadEnum {
    A,
    B(i32),
}

fn main() {}
